# Philosophers

./: .gitignore  CMakeLists.txt  Makefile  README.md
inc/: philo.h
learning/: first_mutex.c  first_semaphore.c  first_thread.c  thread_exer.c  threads_pointer.c  threads_pointer_2.c
src/: checks.c  inits.c  philo.c  philo_actions.c  philo_utils.c  utils.c  utils_2.c  watcher.c
